--- a/src/app/00078-GestionPlanillas/WebApp/packages.config
+++ b/src/app/00078-GestionPlanillas/WebApp/packages.config
@@ -12,7 +12,9 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
