--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Trabajadores.cs" />
   </ItemGroup>
   <ItemGroup>
