--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -130,15 +130,19 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\PlanillasController.cs" />
     <Compile Include="Controllers\TrabajadoresController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResumenPlanillaTrabajadorModel.cs" />
     <Compile Include="Models\TrabajadorModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\Implementations\PlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TrabajadorServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IPlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\ITrabajadorServiceFacade.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
   </ItemGroup>
@@ -380,6 +384,7 @@
     <Content Include="Grid.mvc.readme" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Trabajadores\Index.cshtml" />
+    <Content Include="Views\Planillas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
