--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -136,10 +136,17 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdministrativoModel.cs" />
+    <Compile Include="Models\DocenteModel.cs" />
+    <Compile Include="Models\Mapper.cs" />
     <Compile Include="Models\ResumenPlanillaTrabajadorModel.cs" />
     <Compile Include="Models\TrabajadorModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\IAdministrativoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IDocenteServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\AdministrativoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\DocenteServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TrabajadorServiceFacade.cs" />
     <Compile Include="ServiceFacade\IPlanillaServiceFacade.cs" />
