--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -393,8 +393,10 @@
     <Content Include="Views\Trabajadores\Index.cshtml" />
     <Content Include="Views\Planillas\Index.cshtml" />
     <Content Include="Views\Trabajadores\_MantenimientoDocente.cshtml" />
-    <Content Include="Views\Trabajadores\_DetalleTrabajador.cshtml" />
+    <Content Include="Views\Trabajadores\_MantenimientoTrabajador.cshtml" />
     <Content Include="Views\Trabajadores\_MantenimientoAdministrativo.cshtml" />
+    <Content Include="Views\Trabajadores\_NuevoTrabajador.cshtml" />
+    <Content Include="Views\Trabajadores\_MsgRegistrarTrabajador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
