--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
+    <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
