--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Connection\Response.cs" />
     <Compile Include="Procedures\USP_I_GrabarDocente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tables\TC_Banco.cs" />
+    <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
