avance actualizar datos trabajador

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -47,8 +47,9 @@
   <ItemGroup>
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Connection\Response.cs" />
-    <Compile Include="Procedures\USP_I_GrabarDocente.cs" />
+    <Compile Include="Procedures\USP_I_GrabarTrabajador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tables\TC_Afp.cs" />
     <Compile Include="Tables\TC_Banco.cs" />
     <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
