Mejora mantenimiento trabajador y generación de planilla adm y doc.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Entities\TrabajadorDTO.cs" />
     <Compile Include="Entities\TrabajadorEntity.cs" />
     <Compile Include="Entities\VinculoDTO.cs" />
+    <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Helpers\Mapper.cs" />
     <Compile Include="Helpers\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
