--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -293,9 +293,11 @@
     <Content Include="Assets\images\unknown.png" />
     <None Include="Assets\jquery\jquery-3.3.1.intellisense.js" />
     <Content Include="Assets\jquery\jquery-3.3.1.min.js" />
+    <Content Include="Assets\jquery\jquery-ui.min.js" />
     <Content Include="Assets\jquery\jquery.form.js" />
     <Content Include="Assets\jquery\jquery.unobtrusive-ajax.js" />
     <None Include="Assets\jquery\jquery.validate-vsdoc.js" />
+    <Content Include="Assets\jquery\jquery.validate.date.js" />
     <Content Include="Assets\jquery\jquery.validate.js" />
     <Content Include="Assets\jquery\jquery.validate.unobtrusive.js" />
     <Content Include="Assets\jquery\modernizr-2.6.2.js" />
@@ -409,7 +411,6 @@
     <Content Include="Views\Trabajadores\_MantenimientoDocente.cshtml" />
     <Content Include="Views\Trabajadores\_MantenimientoTrabajador.cshtml" />
     <Content Include="Views\Trabajadores\_MantenimientoAdministrativo.cshtml" />
-    <Content Include="Views\Trabajadores\_NuevoTrabajador.cshtml" />
     <Content Include="Views\Trabajadores\_MsgRegistrarTrabajador.cshtml" />
   </ItemGroup>
   <ItemGroup>
