--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -149,17 +149,21 @@
     <Compile Include="ServiceFacade\IDependenciaServiceFacade.cs" />
     <Compile Include="ServiceFacade\IDocenteServiceFacade.cs" />
     <Compile Include="ServiceFacade\IEstadoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IGrupoOcupacionalServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\AdministrativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\AfpServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\BancoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\DependenciaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\DocenteServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\EstadoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\GrupoOcupacionalServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\NivelRemunerativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\RegimenServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TipoDocumentoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TrabajadorServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\VinculoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\INivelRemunerativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IPlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\IRegimenServiceFacade.cs" />
     <Compile Include="ServiceFacade\ITipoDocumentoServiceFacade.cs" />
