--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Tables\TC_Banco.cs" />
     <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
+    <Compile Include="Tables\TC_GrupoOcupacional.cs" />
+    <Compile Include="Tables\TC_NivelRemunerativo.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
