--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -50,11 +50,14 @@
     <Compile Include="Procedures\USP_I_ActualizarTrabajador.cs" />
     <Compile Include="Procedures\USP_I_RegistrarTrabajador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tables\TC_CategoriaDocente.cs" />
     <Compile Include="Tables\TC_Afp.cs" />
     <Compile Include="Tables\TC_Banco.cs" />
+    <Compile Include="Tables\TC_DedicacionDocente.cs" />
     <Compile Include="Tables\TC_Dependencia.cs" />
     <Compile Include="Tables\TC_Estado.cs" />
     <Compile Include="Tables\TC_GrupoOcupacional.cs" />
+    <Compile Include="Tables\TC_HorasDocente.cs" />
     <Compile Include="Tables\TC_NivelRemunerativo.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
