--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -46,8 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection\Database.cs" />
-    <Compile Include="Connection\Response.cs" />
+    <Compile Include="Connection\Result.cs" />
     <Compile Include="Procedures\USP_I_ActualizarTrabajador.cs" />
+    <Compile Include="Procedures\USP_I_GenerarPlanilla_Docente_Administrativo.cs" />
     <Compile Include="Procedures\USP_I_RegistrarTrabajador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\TC_CategoriaDocente.cs" />
