--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Tables\TC_GrupoOcupacional.cs" />
     <Compile Include="Tables\TC_HorasDocente.cs" />
     <Compile Include="Tables\TC_NivelRemunerativo.cs" />
+    <Compile Include="Tables\TC_Persona.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
