--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Entities\AfpDTO.cs" />
     <Compile Include="Entities\BancoDTO.cs" />
     <Compile Include="Entities\CategoriaDocenteDTO.cs" />
+    <Compile Include="Entities\CategoriaPlanillaDTO.cs" />
     <Compile Include="Entities\DependenciaDTO.cs" />
     <Compile Include="Entities\EstadoDTO.cs" />
     <Compile Include="Entities\GrupoOcupacionalDTO.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Helpers\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ICategoriaDocenteService.cs" />
+    <Compile Include="Services\ICategoriaPlanillaService.cs" />
     <Compile Include="Services\IGrupoOcupacionalService.cs" />
     <Compile Include="Services\IAdministrativoService.cs" />
     <Compile Include="Services\IAfpService.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Services\Implementations\AfpService.cs" />
     <Compile Include="Services\Implementations\BancoService.cs" />
     <Compile Include="Services\Implementations\CategoriaDocenteService.cs" />
+    <Compile Include="Services\Implementations\CategoriaPlanillaService.cs" />
     <Compile Include="Services\Implementations\DependenciaService.cs" />
     <Compile Include="Services\Implementations\DocenteService.cs" />
     <Compile Include="Services\Implementations\EstadoService.cs" />
