Avance generación de planillas docente y adm

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
     <Compile Include="Views\VW_Docentes.cs" />
+    <Compile Include="Views\VW_TrabajadoresCategoriaPlanilla.cs" />
     <Compile Include="Views\VW_Trabajadores.cs" />
   </ItemGroup>
   <ItemGroup>
