--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -47,8 +47,10 @@
   <ItemGroup>
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Connection\Result.cs" />
-    <Compile Include="Procedures\USP_I_ActualizarTrabajador.cs" />
+    <Compile Include="Procedures\USP_U_ActualizarConcepto.cs" />
+    <Compile Include="Procedures\USP_U_ActualizarTrabajador.cs" />
     <Compile Include="Procedures\USP_I_GenerarPlanilla_Docente_Administrativo.cs" />
+    <Compile Include="Procedures\USP_I_RegistrarConcepto.cs" />
     <Compile Include="Procedures\USP_I_RegistrarTrabajador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\TC_CategoriaDocente.cs" />
@@ -66,6 +68,7 @@
     <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Tables\TR_Periodo.cs" />
+    <Compile Include="Views\VW_Conceptos.cs" />
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
     <Compile Include="Views\VW_Docentes.cs" />
