--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Tables\TC_NivelRemunerativo.cs" />
     <Compile Include="Tables\TC_Persona.cs" />
     <Compile Include="Tables\TC_Regimen.cs" />
+    <Compile Include="Tables\TC_TipoConcepto.cs" />
     <Compile Include="Tables\TC_TipoDocumento.cs" />
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Tables\TR_Periodo.cs" />
