--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -172,6 +172,7 @@
     <Compile Include="ServiceFacade\Implementations\NivelRemunerativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PeriodoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PlanillaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\PlantillaPlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\RegimenServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TipoConceptoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\TipoDocumentoServiceFacade.cs" />
@@ -180,6 +181,7 @@
     <Compile Include="ServiceFacade\INivelRemunerativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IPeriodoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IPlanillaServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IPlantillaPlanillaServiceFacade.cs" />
     <Compile Include="ServiceFacade\IRegimenServiceFacade.cs" />
     <Compile Include="ServiceFacade\ITipoConceptoServiceFacade.cs" />
     <Compile Include="ServiceFacade\ITipoDocumentoServiceFacade.cs" />
