--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Tables\TR_Periodo.cs" />
     <Compile Include="Views\VW_Conceptos.cs" />
+    <Compile Include="Views\VW_PlantillaPlanilla.cs" />
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
     <Compile Include="Views\VW_Docentes.cs" />
